Added a Dog Img and few elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
-<h1> Hey. I am a big heading </h1>
-<p>Hey, I am a paragraph element</p>
-<a href="http://google.com" target="_blank" title="Let's go to google">Click me! I am a link based on an anchor element</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+
+<body>
+	<h1> Hey. I am a big heading </h1>
+	<p>Hey, I am a <b>paragraph</b> element</p>
+	<a href="http://google.com" target="_blank" title="Let's go to google">Click me! I am a link based on an anchor element</a>
+	<p>My name is: <br>
+	Doggo</p>
+	<img src="https://i.insider.com/5484d9d1eab8ea3017b17e29?width=1100&format=jpeg&auto=webp">
+</body>
+</html>
