--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
 
 <body>
 	<h1> Hey. I am a big heading </h1>
+	<h2> I am a secondary heading </h2>
 	<p>Hey, I am a <b>paragraph</b> element</p>
 	<a href="http://google.com" target="_blank" title="Let's go to google">Click me! I am a link based on an anchor element</a>
 	<p>My name is: <br>
