Updates after looking at phone

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Family -->
 		<h2>Oki's Family</h2>
 		<p>Oki was adopted when he was 3 months old by Sam. His mom, Emily came into the family after he was about 1 year old.
-		He also has an aunt and uncle who loves him very much. He has a lot of love in his life and eats a lot of treats due to his Dad.</p>
+		He also has an aunt and uncle who loves him very much.</p>
 		
 		<!-- Unordered Lists -->
 		<ul>
